// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`changelog generation writeChangelog generates correct changelog 1`] = `
"# Change Log - foo

This log was last generated on (date) and should not be manually modified.

<!-- Start content -->

## 1.0.0

(date)

### Patches

- comment 2 (test@testtestme.com)
- comment 1 (test@testtestme.com)
- additional comment 1 (test@testtestme.com)
- additional comment 2 (test@testtestme.com)
- Bump foo to v1.0.0
"
`;

exports[`changelog generation writeChangelog generates correct changelog 2`] = `
Object {
  "entries": Array [
    Object {
      "comments": Object {
        "patch": Array [
          Object {
            "author": "test@testtestme.com",
            "comment": "comment 2",
            "commit": "(sha1)",
            "package": "foo",
          },
          Object {
            "author": "test@testtestme.com",
            "comment": "comment 1",
            "commit": "(sha1)",
            "package": "foo",
          },
          Object {
            "author": "test@testtestme.com",
            "comment": "additional comment 1",
            "commit": "(sha1)",
            "package": "foo",
          },
          Object {
            "author": "test@testtestme.com",
            "comment": "additional comment 2",
            "commit": "(sha1)",
            "package": "foo",
          },
          Object {
            "author": "beachball",
            "comment": "Bump foo to v1.0.0",
            "commit": "(sha1)",
            "package": "foo",
          },
        ],
      },
      "date": "(date)",
      "tag": "foo_v1.0.0",
      "version": "1.0.0",
    },
  ],
  "name": "foo",
}
`;

exports[`changelog generation writeChangelog generates correct changelog in monorepo with groupChanges (grouped change FILES) 1`] = `
"# Change Log - foo

This log was last generated on (date) and should not be manually modified.

<!-- Start content -->

## 1.0.0

(date)

### Patches

- comment 2 (test@testtestme.com)
- comment 1 (test@testtestme.com)
- additional comment 1 (test@testtestme.com)
- additional comment 2 (test@testtestme.com)
"
`;

exports[`changelog generation writeChangelog generates correct changelog in monorepo with groupChanges (grouped change FILES) 2`] = `
"# Change Log - bar

This log was last generated on (date) and should not be manually modified.

<!-- Start content -->

## 1.3.4

(date)

### Patches

- comment from bar change  (test@testtestme.com)
"
`;

exports[`changelog generation writeChangelog generates correct changelog in monorepo with groupChanges (grouped change FILES) 3`] = `
Object {
  "entries": Array [
    Object {
      "comments": Object {
        "patch": Array [
          Object {
            "author": "test@testtestme.com",
            "comment": "comment 2",
            "commit": "(sha1)",
            "package": "foo",
          },
          Object {
            "author": "test@testtestme.com",
            "comment": "comment 1",
            "commit": "(sha1)",
            "package": "foo",
          },
          Object {
            "author": "test@testtestme.com",
            "comment": "additional comment 1",
            "commit": "(sha1)",
            "package": "foo",
          },
          Object {
            "author": "test@testtestme.com",
            "comment": "additional comment 2",
            "commit": "(sha1)",
            "package": "foo",
          },
        ],
      },
      "date": "(date)",
      "tag": "foo_v1.0.0",
      "version": "1.0.0",
    },
  ],
  "name": "foo",
}
`;

exports[`changelog generation writeChangelog generates correct changelog in monorepo with groupChanges (grouped change FILES) 4`] = `
Object {
  "entries": Array [
    Object {
      "comments": Object {
        "patch": Array [
          Object {
            "author": "test@testtestme.com",
            "comment": "comment from bar change ",
            "commit": "(sha1)",
            "package": "bar",
          },
        ],
      },
      "date": "(date)",
      "tag": "bar_v1.3.4",
      "version": "1.3.4",
    },
  ],
  "name": "bar",
}
`;

exports[`changelog generation writeChangelog generates correct grouped changelog 1`] = `
"# Change Log - foo

This log was last generated on (date) and should not be manually modified.

<!-- Start content -->

## 1.0.0

(date)

### Patches

- comment 1 (test@testtestme.com)
"
`;

exports[`changelog generation writeChangelog generates correct grouped changelog 2`] = `
"# Change Log - bar

This log was last generated on (date) and should not be manually modified.

<!-- Start content -->

## 1.3.4

(date)

### Patches

- comment 3 (test@testtestme.com)
- comment 2 (test@testtestme.com)
"
`;

exports[`changelog generation writeChangelog generates correct grouped changelog 3`] = `
"# Change Log - foo

This log was last generated on (date) and should not be manually modified.

<!-- Start content -->

## 1.0.0

(date)

### Patches

- \`bar\`
  - comment 3 (test@testtestme.com)
  - comment 2 (test@testtestme.com)
- \`foo\`
  - comment 1 (test@testtestme.com)
"
`;

exports[`changelog generation writeChangelog generates correct grouped changelog when grouped change log is saved to the same dir as a regular changelog 1`] = `
"# Change Log - bar

This log was last generated on (date) and should not be manually modified.

<!-- Start content -->

## 1.3.4

(date)

### Patches

- comment 2 (test@testtestme.com)
"
`;

exports[`changelog generation writeChangelog generates correct grouped changelog when grouped change log is saved to the same dir as a regular changelog 2`] = `
"# Change Log - foo

This log was last generated on (date) and should not be manually modified.

<!-- Start content -->

## 1.0.0

(date)

### Patches

- \`bar\`
  - comment 2 (test@testtestme.com)
- \`foo\`
  - comment 1 (test@testtestme.com)
"
`;

exports[`changelog generation writeChangelog generates grouped changelog without dependent change entries 1`] = `
"# Change Log - bar

This log was last generated on (date) and should not be manually modified.

<!-- Start content -->

## 1.3.4

(date)

### Patches

- Bump baz to v1.3.4
"
`;

exports[`changelog generation writeChangelog generates grouped changelog without dependent change entries 2`] = `
"# Change Log - baz

This log was last generated on (date) and should not be manually modified.

<!-- Start content -->

## 1.3.4

(date)

### Patches

- comment 1 (test@testtestme.com)
"
`;

exports[`changelog generation writeChangelog generates grouped changelog without dependent change entries 3`] = `
"# Change Log - foo

This log was last generated on (date) and should not be manually modified.

<!-- Start content -->

## 1.0.0

(date)

### Patches

- \`baz\`
  - comment 1 (test@testtestme.com)
"
`;

exports[`changelog generation writeChangelog generates grouped changelog without dependent change entries where packages have normal changes and dependenc changes 1`] = `
"# Change Log - bar

This log was last generated on (date) and should not be manually modified.

<!-- Start content -->

## 1.3.4

(date)

### Patches

- comment 1 (test@testtestme.com)
- Bump baz to v1.3.4
"
`;

exports[`changelog generation writeChangelog generates grouped changelog without dependent change entries where packages have normal changes and dependenc changes 2`] = `
"# Change Log - baz

This log was last generated on (date) and should not be manually modified.

<!-- Start content -->

## 1.3.4

(date)

### Patches

- comment 1 (test@testtestme.com)
"
`;

exports[`changelog generation writeChangelog generates grouped changelog without dependent change entries where packages have normal changes and dependenc changes 3`] = `
"# Change Log - foo

This log was last generated on (date) and should not be manually modified.

<!-- Start content -->

## 1.0.0

(date)

### Patches

- \`bar\`
  - comment 1 (test@testtestme.com)
- \`baz\`
  - comment 1 (test@testtestme.com)
"
`;
